# ANVIL

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  fly.toml  pyproject.toml
.cursor/rules/: domain.mdc  python-style.mdc  testing.mdc
.github/workflows/: ci.yml
data/calibration/: calibration.json  calibration.md
data/parser_benchmark/: public_pressure_sources.json  results.json
data/parser_benchmark/ground_truth/: nasa_sp8007.json  spes1_synthetic.json
data/pinned/: asme_viii1_formulas.json
data/runs/2026-04-25T08-59-59Z_fake_goldenv1_abl-baseline/: manifest.json  report.md  summary.json
data/runs/2026-04-25T08-59-59Z_fake_goldenv1_abl-bm25-only/: manifest.json  per_example.json  report.md  summary.json
data/synthetic/: README.md  design_examples.json  joint_efficiency_table.json  standard.md  table_1a_materials.json
docs/: ablations.md  ablations_table.md  agent_loop.md  agent_results.md  agent_results_clean.md  agent_results_partial.md  agent_results_smoke.md  architecture.md  cost_budget.md  design_decisions.md  evaluation_methodology.md  headline_results.md  local_demo.md  nim_integration.md  parser_benchmark.md  pipeline_vs_agent.md  private_asme.md  report.md  test_inventory.md  trust_calibration.md
scripts/: audit_private_artifacts.py  compare_runs.py  demo.py  download_public_pressure_docs.py  evaluate.py  ingest.py  run_ablations.py  run_agent_eval.py  run_calibration.py  run_demo.py  run_nim_headlines.py  run_parser_benchmark.py  run_private_asme_eval.py
src/anvil/: __init__.py  artifact_audit.py  cli.py  logging_config.py  pipeline.py
src/anvil/api/: __init__.py  app.py  (+3 more)
tests/: conftest.py
tests/evaluation/: golden_dataset.json  test_evaluation.py
tests/integration/: test_agent_eval.py  test_end_to_end.py  test_parametric_retrieval.py  test_parse_to_graph.py  test_query_pipeline.py
tests/unit/: test_ablations.py  test_agent.py  test_artifact_audit.py  test_audit_regressions.py  test_calculation_engine.py  test_calibration.py  test_citation_enforcer.py  test_fail_loud.py  test_generation.py  test_generator_soft_refusal.py  test_knowledge_graph.py  test_nim_health.py  test_parser_benchmark.py  test_parser_metrics.py  test_parsing.py  test_pinned_data.py  test_refusal_gate.py  test_retrieval.py  test_run_logger.py  test_schemas.py
(+270 files in other folders)
